syntax = "proto3";
package mechain.mekyc;

option go_package = "me-chain/x/mekyc/types";

message Kyc {
  string account = 1; 
  string creator = 2; 
  string regionId = 3; 
  
}

