syntax = "proto3";
package mechain.meservice;

option go_package = "me-chain/x/meservice/types";
import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

enum FixedDepositTerm {
  option (gogoproto.goproto_enum_prefix) = false;

  Term_1_MONTHS = 0 [(gogoproto.enumvalue_customname) = "Term1Month"];
  Term_3_MONTHS = 1 [(gogoproto.enumvalue_customname) = "Term3Month"];
  Term_6_MONTHS = 2 [(gogoproto.enumvalue_customname) = "Term6Month"];
  Term_12_MONTHS = 3 [(gogoproto.enumvalue_customname) = "Term12Month"];
  Term_24_MONTHS = 4 [(gogoproto.enumvalue_customname) = "Term24Month"];
  Term_48_MONTHS = 5 [(gogoproto.enumvalue_customname) = "Term48Month"];
}

enum FixedDepositQueryType {
  option (gogoproto.goproto_enum_prefix) = false;

  QUERY_ALL = 0         [(gogoproto.enumvalue_customname) = "QueryAll"];
  QUERY_NOT_EXPIRED = 1 [(gogoproto.enumvalue_customname) = "QueryNotExpired"];
  QUERY_EXPIRED = 2     [(gogoproto.enumvalue_customname) = "QueryExpired"];
}

message FixedDepositAnnualRate {
  string annualRate_1_months = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  string annualRate_3_months = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];

  string annualRate_6_months = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];

  string annualRate_12_months = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];

  string annualRate_24_months = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];

  string annualRate_48_months = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

message FixedDepositVault {
  string account = 1;
  FixedDepositAnnualRate rate = 2;
}

message FixedDeposit {
  uint64 id = 1;
  string account = 2;
  cosmos.base.v1beta1.Coin principal = 3 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin interest = 4 [(gogoproto.nullable) = false];
  google.protobuf.Timestamp start_time = 5  [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp end_time = 6  [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}
